mas cambios en glamour

--- a/_posts/2022-02-05-glamour-01.md
+++ b/_posts/2022-02-05-glamour-01.md
@@ -15,7 +15,7 @@ Hola a todos/as, soy Eirene y os traigo una **guía de *Glamour* completa para p
 - [Introducción](#introducción)
 - [Desbloqueando las funciones de *Glamour*](#desbloqueando-las-funciones-de-glamour)
 - [Accediendo a los armarios](#accediendo-a-los-armarios)
-- [Diferenciando *Armoire* de *Glamour Dresser*](#diferenciando-armoire-de-glamour-dresser)
+- [Diferenciando *Glamour Dresser* de *Armoire*](#diferenciando-glamour-dresser-de-armoire)
 - [Guardando objetos en el *Glamour Dresser* y *Armoire*](#guardando-objetos-en-el-glamour-dresser-y-armoire)
 - [Sacando un objeto del *Glamour Dresser* o *Armoire*](#sacando-un-objeto-del-glamour-dresser-o-armoire)
 - [Coloreando piezas, el mundo de los tintes](#coloreando-piezas-el-mundo-de-los-tintes)
@@ -67,18 +67,18 @@ Ejemplo:
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/glamour/primerospasos/8.jpg" alt="8"/></p>
 
-Este objeto es una pechera (*Body*) de paladín (*PLD*) de *item level* 55 que se puede equipar desde nivel 50 (de paso estamos repasando donde se ven esas cosas), pero eso ahora nos da igual.<br/>
+Este objeto es una pechera (*Body*) de paladín (*PLD*) de *Item level* 55 que se puede equipar desde nivel 50 (de paso estamos repasando donde se ven esas cosas), pero eso ahora nos da igual.<br/>
 **Mira arriba a la derecha de la foto**. ¿Ves esos tres iconos blanquecinos?<br/>
 El icono de la **derecha** del todo es el icono del *Armoire*.<br/>
 El icono del **medio** es el icono del *Glamour Dresser*.<br/>
 El icono de la **izquierda** es referente a los tintes.<br/>
-Si el icono está de este color **blanco**, significa que ese objeto es apto para esa función. Si alguno de ellos estuviese en **color gris**, significa que esa particularidad no la tiene. 
+Si el icono está de este color **blanco**, significaría que ese objeto es apto para esa función. Si alguno de ellos estuviese en **color gris**, significa que esa particularidad no la tiene. 
 
 <sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
 
-#### Diferenciando *Armoire* de *Glamour Dresser*
+#### Diferenciando *Glamour Dresser* de *Armoire*
 
-Ahora bien, ¿qué diferencia hay entre *Armoire* y *Glamour Dresser*? **El *Armoire* no tiene límite de espacio** de almacenaje pero **sólo** puedes meter **objetos de tienda o de eventos**. Si tienes alguno ni lo dudes, metelo ahí. El ***Glamour Dresser*** tiene **400 huecos totales** (actualmente) de almacenaje, puedes meter todo tipo de piezas de equipo y, si las tiñes antes de meterlas, se guardan teñidas. Ahora llegaremos a esta parte, pero primero hay que hablar de algo importante: los *Glamour prism*.<br/>
+Ahora bien, ¿qué diferencia hay entre *Glamour Dresser* y *Armoire*? **El *Armoire* no tiene límite de espacio** de almacenaje pero **sólo** puedes meter **objetos de tienda o de eventos**. Si tienes alguno ni lo dudes, metelo ahí. El ***Glamour Dresser*** tiene **400 huecos totales** (actualmente) de almacenaje, puedes meter todo tipo de piezas de equipo y, si las tiñes antes de meterlas, se guardan teñidas. Ahora llegaremos a esta parte, pero primero hay que hablar de algo importante: los *Glamour prism*.<br/>
 Estos **prismas de *Glamour***, que se obtienen en la *Grand Company*, en vendedores normales o de *PvP*, se crean con profesiones de *crafteo* o se pueden comprar en el *Market Board*, sirven para poder **poner una pieza de equipo dentro del *Glamour Dresser***. ¡Por este motivo necesitarás unos cuantos!
 
 <sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
@@ -90,8 +90,8 @@ Al darle *Click* al *Glamour Dresser* veremos lo siguiente:
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/glamour/primerospasos/3.jpg" alt="3"/></p>
 
-La ventana de la **izquierda** es nuestro ***Glamour Dresser***. Podemos verlo por apartados (los iconos de arriba), podemos filtrarlo por clase/*job* (el desplegable donde pone “*all*”) y podemos ver también los huecos que nos quedan abajo a la derecha de esa ventana (si, voy un poco apurada, tengo que hacer limpieza).<br/>
-En la ventana de la **derecha**, tras hacer la selección que se aprecia arriba, podemos ver todos los objetos de mi inventario que pueden ir al *Glamour Dresser* (si antes has comprado los objetos transparentes que te dije y no están en tu inventario, posiblemente los tengas en el *Armory Chest*, miralo con *Control + C*).
+La ventana de la **izquierda** es nuestro ***Glamour Dresser***. Podemos verlo por apartados (los iconos de arriba), podemos filtrarlo por clase/*job* (el desplegable donde pone “*all*”) y podemos ver también los huecos que nos quedan abajo a la derecha de esa ventana (sí, voy un poco apurada, tengo que hacer limpieza).<br/>
+En la ventana de la **derecha**, tras hacer la selección que se aprecia arriba, podemos ver todos los objetos de mi inventario que pueden ir al *Glamour Dresser* (si antes has comprado los objetos transparentes que te dije y no están en tu inventario, posiblemente los tengas en el *Armory Chest*, míralo con *Control + C*).
 
 Para **meter un objeto nuevo en el *Glamour Dresser*** (teniendo ***Glamour Prisms* en el inventario**), solo hace falta hacerle *Click* al objeto desde la ventana que tenemos en la foto, aceptamos y se añade. La **pieza** tiene que estar **reparada** y puede que el juego te avise de que se va a perder la progresión del objeto. Dale a aceptar y listo. Lo que se resetea es el progreso del uso del objeto para que cree una *materia* y en equipo bajo no tiene importancia, así que adelante.
 
@@ -124,7 +124,7 @@ Aquí podemos editar los **15 *Plates***, seleccionando las cosas desde la venta
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/glamour/primerospasos/9.jpg" alt="9"/></p>
 
-La diferencia de teñirla aquí o antes es que **este tinte se aplica solo al *Plate*** y no a la pieza que tienes guardada. Si la guardaste de color blanco, por ejemplo, ese color se guardará, pero en el *Plate* podrás teñirla de nuevo del color que tu quieras. Si volvieses a seleccionar esa pieza para un Plate, volvería a aparecer blanca. Por eso es **importante teñir las piezas antes**, porque de lo contrario gastarías una cantidad de blanco (por ejemplo) demasiado grande cada vez que quieras hacer un *Plate*. Si ya la has almacenado de ese color, no tienes que volver a teñirla cada vez. Eso si, hago una matización. **Los *Plates*** que guardes se quedarán guardados hasta que los modifiques, no se borran solos, pero llega un momento que vas cambiando tanto de *Glamour* que tienes más *Glamours* que *Plates* y te renta tener ese pantalón (ejemplo) ya teñido de blanco o del color que sea para que, cuando quieras usarlo, no tengas que gastar el tinte. Además, también disponemos de un objeto para quitar el tinte y devolver el color de base del objeto. Se llama *Terebinth* y lo venden los mismos *NPC’s* de las ciudades que te venden tintes.<br/>
+La diferencia de teñirla aquí o antes es que **este tinte se aplica solo al *Plate*** y no a la pieza que tienes guardada. Si la guardaste de color blanco, por ejemplo, ese color se guardará, pero en el *Plate* podrás teñirla de nuevo del color que tú quieras. Si volvieses a seleccionar esa pieza para un *Plate*, volvería a aparecer blanca. Por eso es **importante teñir las piezas antes**, porque de lo contrario gastarías una cantidad de blanco (por ejemplo) demasiado grande cada vez que quieras hacer un *Plate*. Si ya la has almacenado de ese color, no tienes que volver a teñirla cada vez. Eso si, hago una matización. **Los *Plates*** que guardes se quedarán guardados hasta que los modifiques, no se borran solos, pero llega un momento que vas cambiando tanto de *Glamour* que tienes más *Glamours* que *Plates* y te renta tener ese pantalón (ejemplo) ya teñido de blanco o del color que sea para que, cuando quieras usarlo, no tengas que gastar el tinte. Además, también disponemos de un objeto para quitar el tinte y devolver el color de base del objeto. Se llama *Terebinth* y lo venden los mismos *NPC’s* de las ciudades que te venden tintes.<br/>
 Una vez tengas listo tu *Glamour Plate*, le das a *Save* y, si quieres, a *Apply*. 
 
 <sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
@@ -132,7 +132,7 @@ Una vez tengas listo tu *Glamour Plate*, le das a *Save* y, si quieres, a *Apply
 #### Restricciones del equipo
 
 Como sabrás, hay piezas de equipo para todas las clases / *jobs* y otras específicas. No podrás *glamourear* una pieza de “*Discipline of War*” en un *Summoner*, por ejemplo.<br/>
-Además, **no podrás *glamourear* una pieza que sea de mayor nivel o *Item Level* que la que lleves equipada**. En los casos en los que te mejora el item level, mejor saca esa pieza del *Glamour Dresser*, póntela y luego ya la volverás a meter cuando te equipes algo mejor.<br/>
+Además, **no podrás *glamourear* una pieza que sea de mayor nivel o *Item Level* que la que lleves equipada**. En los casos en los que te mejora el *Item Level*, mejor saca esa pieza del *Glamour Dresser*, póntela y luego ya la volverás a meter cuando te equipes algo mejor.<br/>
 Otra pregunta que me surge de esto: ¿puedo meter algo en el *Glamour Dresser*, ponerlo en un *Plate* y luego sacarlo del *Dresser* y equiparmelo (porque es lo que más me mejora) o guardarlo y que se quede en ese *Plate*? Sí. Puedes. Yo lo he hecho con el equipo actual de la raid.
 
 <sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
