--- a/_posts/2022-02-07-glamour-01.md
+++ b/_posts/2022-02-07-glamour-01.md
@@ -146,6 +146,8 @@ Abriendo la ventana de personaje (la *C* por defecto), encima de nuestra arma, t
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/guias/glamour/primerospasos/7.jpg" alt="7"/></p>
 
+Le damos a ese icono y podremos ver todos los Glamour Plates que hayamos creado previamente desde el *Glamour Dresser*. Esta pantalla es la que usaremos cuando estemos fuera de esta habitación en la que nos encontramos. ¿Podemos editar los *Glamour Plates* fuera de la habitación y sin tocar el *Glamour Dresser*? No. Pero podemos aplicarnos un *Glamour* estando en medio de *Gridania*.
+
 <sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
 
 #### *Glamours* distintos para *Jobs* que comparten equipo
