rewording de la guia de glamour

--- a/_posts/2022-02-07-glamour-01.md
+++ b/_posts/2022-02-07-glamour-01.md
@@ -71,7 +71,7 @@ Este objeto es una pechera (*Body*) de paladín (*PLD*) de *Item level* 55 que s
 **Mira arriba a la derecha de la foto**. ¿Ves esos tres iconos blanquecinos?<br/>
 El icono de la **derecha** del todo es el icono del *Armoire*.<br/>
 El icono del **medio** es el icono del *Glamour Dresser*.<br/>
-El icono de la **izquierda** es referente a los tintes.<br/>
+El icono de la **izquierda** es referente a la posibilidad de poner el escudo de FC en la pieza.<br/>
 Si el icono está de este color **blanco**, significaría que ese objeto es apto para esa función. Si alguno de ellos estuviese en **color gris**, significa que esa particularidad no la tiene. 
 
 <sub><sup><i><a href="#contenido">▲ Volver ▲</a></i></sup></sub>
@@ -108,6 +108,8 @@ En ambos casos, **las piezas se pueden sacar cuando quieras**. En el caso del *G
 #### Coloreando piezas, el mundo de los tintes.
 
 Pasemos a hablar de los tintes. Este es un tema importante.
+
+Lo primero: para **saber si una pieza es tintable**, *Click Derecho* sobre la pieza y **si pone "*Dye*"** es que se **puede teñir**.
 
 **En el *Armoire* no puedes guardar algo teñido, pero en el *Glamour Dresser*, si**. El tema aquí es que hay tintes que son caros y tú, a lo mejor, esa pieza siempre la vas a querer usar de color blanco puro (es algo que me pasó al principio). Por dicho motivo, antes de meter una pieza en el *Glamour Dresser* o una vez dentro (en la ventana de la izquierda de la foto de arriba), *Click Derecho* sobre la pieza y seleccionas “*Dye*”. Tienes que tener en el inventario el tinte que quieras ponerle, lo seleccionas de la lista de tintes, le das a aceptar y listo, teñido.<br/>
 Si quieres teñir algo del *Armoire* tienes dos opciones: o lo tiñes desde los *Plates* (a continuación vemos cómo funcionan los *Plates*) siempre que lo uses (con un tinte barato) o lo sacas del *Armoire*, lo tiñes y lo pones en el *Glamour Dresser* ya teñido. Te ocupará un hueco, sí, pero no tendrás que gastar ese tinte caro cada vez que lo pongas en un *Plate*.
