correciones zapatos no pantalones

--- a/_posts/2022-03-11-fashion220311.md
+++ b/_posts/2022-03-11-fashion220311.md
@@ -19,4 +19,4 @@ Esta semana de nuevo [Kaiyoko Star](https://twitter.com/kaiyokostar){:target="_b
 Para hacer los **80 puntos** de manera fácil y ganar los **60,000 MGP**:
 
 - En **pantalones** <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/6f78b2ff679" class="eorzeadb_link" target="_blank">Leather Culottes</a> que podéis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/5c0bdbdc542/?item=791b438d0fe&type=gil" class="eorzeadb_link" target="_blank">Domitien</a> en **Old Gridania (X:14.3 Y:9.8)** en la categoría *Purchase Purchase Disciple of the Hand and Land Gear > Purchase Gear (Lv. 1-9)* por 135 gil.
-- En **pantalones** <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/510347881ea" class="eorzeadb_link" target="_blank">Leather Shoes</a> que podéis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/5c0bdbdc542/?item=791b438d0fe&type=gil" class="eorzeadb_link" target="_blank">Domitien</a> en **Old Gridania (X:14.3 Y:9.8)** en la categoría *Purchase Purchase Disciple of the Hand and Land Gear > Purchase Gear (Lv. 1-9)* por 115 gil.
+- En **zapatos** <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/510347881ea" class="eorzeadb_link" target="_blank">Leather Shoes</a> que podéis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/5c0bdbdc542/?item=791b438d0fe&type=gil" class="eorzeadb_link" target="_blank">Domitien</a> en **Old Gridania (X:14.3 Y:9.8)** en la categoría *Purchase Purchase Disciple of the Hand and Land Gear > Purchase Gear (Lv. 1-9)* por 115 gil.
