--- a/_posts/2022-03-13-devblog-01.md
+++ b/_posts/2022-03-13-devblog-01.md
@@ -18,7 +18,7 @@ hidden: false
 
 ¡Hola!
 
-Soy Sicycre, del equipo de Comunidad. ¿Os podéis creer que ya sea marzo? Pronto habrá un cambio de estación, pero ¿sabéis qué más se viene? Un evento temporal que ocurre durante la transición entre el invierno y la primavera: el **Día de las Mujercitas (Little Ladies’ Day)**.
+Soy Sicycre, del equipo de Comunidad. ¿Os podéis creer que ya sea marzo? Pronto habrá un cambio de estación, pero ¿sabéis qué más se viene? Un evento estacional que ocurre durante la transición entre el invierno y la primavera: el **Día de las Mujercitas (Little Ladies’ Day)**.
 
 Hoy os quiero hablar de los detalles del evento y sus recompensas.
 
