--- a/_posts/2022-03-13-devblog-01.md
+++ b/_posts/2022-03-13-devblog-01.md
@@ -53,7 +53,7 @@ Varios gurús de la moda me han dicho que esta corona queda muy elegante cuando 
     <img src="{{ site.baseurl }}/assets/images/articles/devblog/01/imagen_3.jpg" alt="Razas y Géneros"/>
 </p>
 
-Además, los vendedores que aparecen durante el evento temporal tendrán dos tipos de **confeti** disponibles: **melocotón** (Peach Confetti) y **cereza** (Cherry Confetti). Yo siempre intento comprar para todo el año. Son objetos que dan un toque especial a las capturas de pantalla, así que es buena idea acumularlos.
+Además, los vendedores que aparecen durante el evento estacional tendrán dos tipos de **confeti** disponibles: **melocotón** (Peach Confetti) y **cereza** (Cherry Confetti). Yo siempre intento comprar para todo el año. Son objetos que dan un toque especial a las capturas de pantalla, así que es buena idea acumularlos.
 
 <p align="center">
     <img src="{{ site.baseurl }}/assets/images/articles/devblog/01/imagen_4.jpg" alt="Confetti"/>
@@ -68,5 +68,5 @@ Sicycre
 Equipo de Comunidad
 
 <blockquote>
-Si queréis saber mas del <b>evento</b> y sus <b>recompensas</b> pasar por <a href="/little-ladies-2022">la detallada entrada</a> que hicimos en la gaceta sobre el mismo.
+Si queréis saber más del <b>evento</b> y sus <b>recompensas</b> pasad por <a href="/little-ladies-2022">la detallada entrada</a> que hicimos en la gaceta sobre el mismo.
 <blockquote>
