--- a/_posts/2022-03-14-fandub-2.md
+++ b/_posts/2022-03-14-fandub-2.md
@@ -24,6 +24,7 @@ No olvidéis seguirnos en [twitter](https://twitter.com/FFXIV_Fandub){:target="_
 - Ryne: [Teresuky A. Farron](https://twitter.com/Teresuky21){:target="_blank"}
 - Urianger: [Sia Krassen](https://twitter.com/SiaKrassen){:target="_blank"}
 - Y'shtola: [AquaYuki❄️](https://twitter.com/AquaYuki_121){:target="_blank"}
+- Lyna: [Aura](https://twitter.com/OkamiKurotsuki){:target="_blank"}
 
 #### Dirección de Doblaje:
 - [Lia Tales](https://twitter.com/LiaTales_ffxiv){:target="_blank"}
