actores de doblaje no dobladores, puto chona

--- a/_posts/2022-03-25-el-ocular-07.md
+++ b/_posts/2022-03-25-el-ocular-07.md
@@ -10,7 +10,7 @@ featured: false
 hidden: false
 ---
 
-La séptima entrega del Podcast de [El Ocular](https://twitter.com/OcularEl){:target="_blank"} con [Choco Feru](https://twitter.com/ChocoFeru){:target="_blank"}, [Noah](https://twitter.com/Habeces4){:target="_blank"}, [Lia Tales](https://twitter.com/LiaTales_ffxiv){:target="_blank"}, [Elanor](https://twitter.com/trencapins){:target="_blank"} y de invitados [Aarón](https://twitter.com/stillone999){:target="_blank"} y [Dani Tomas](https://twitter.com/DaniTomas16){:target="_blank"} dobladores del [FFXIV Fandub en Español](https://twitter.com/FFXIV_Fandub){:target="_blank"} donde hablaron del mundo del doblaje y su experiencia en este interesante proyecto.
+La séptima entrega del Podcast de [El Ocular](https://twitter.com/OcularEl){:target="_blank"} con [Choco Feru](https://twitter.com/ChocoFeru){:target="_blank"}, [Noah](https://twitter.com/Habeces4){:target="_blank"}, [Lia Tales](https://twitter.com/LiaTales_ffxiv){:target="_blank"}, [Elanor](https://twitter.com/trencapins){:target="_blank"} y de invitados [Aarón](https://twitter.com/stillone999){:target="_blank"} y [Dani Tomas](https://twitter.com/DaniTomas16){:target="_blank"} actores de doblaje del [FFXIV Fandub en Español](https://twitter.com/FFXIV_Fandub){:target="_blank"} donde hablaron del mundo del doblaje y su experiencia en este interesante proyecto.
 
 Podéis ver el Podcast al completo en el vídeo a continuación. No os olvidéis de seguir [el canal](https://www.youtube.com/channel/UC0Ncgc0JH3CtDMraAIrlGkQ){:target="_blank"} y darle like si os ha gustado.
 
