actualizacion de live letter 70

--- a/_posts/2022-04-03-live-letter-70-1.md
+++ b/_posts/2022-04-03-live-letter-70-1.md
@@ -27,9 +27,9 @@ Además, se añadirá una gran cantidad de líneas argumentales y misiones secun
 - Misiones de rol adicionales: se podrán desbloquear al completar todas las series de misiones de rol de *Endwalker*.
 - Nuevo arco de la historia de *Hildibrand* (parche 6.15).
 - *Omega: Beyond the Rift*, una serie de misiones que amplían la historia de *Omega* (parche 6.1x).
--* Custom Deliveries: Ameliance Leveilleur* (parche 6.15).
+- *Custom Deliveries: Ameliance Leveilleur* (parche 6.15).
 
-#### Sistema de ayudantes (Duty Support System)
+#### Sistema de ayudantes (*Duty Support System*)
 
 Se trata de un nuevo sistema similar al sistema *Trust*, en el que podrás realizar contenido multijugador, en especial mazmorras, con ayuda de personajes no jugables. En el parche 6.1, estará disponible el contenido de *A Realm Reborn* (parche 2.0).
 
@@ -169,5 +169,5 @@ En el siguiente [enlace](/live-letter-70-2/){:target="_blank"} podrás encontrar
 - Varios productos de merchandising de *The Primals* exclusivos para *Japón*: disponibles del 1 al 21 de abril.
 - Libro de arte *The Art of resurrection - Among the Stars*: primer libro de arte de *Endwalker*, que saldrá a la venta el 13 de septiembre. Su precio es de 34,99 € y viene con un minion de la nave *Ragnarok*.
 - Auriculares inmersivos *Panasonic SoundSlayer FINAL FANTASY® XIV Online Edition*: reserva disponible para *España*; se lanzarán a principios de abril.
-- Tareas de mantenimiento y lectura de las notas de parche: el **11 de abril a las 13:00** (hora peninsular), *Yoshida* leerá las notas de parche. El **mantenimiento** previo al lanzamiento del parche** durará 24 horas**.
+- Tareas de mantenimiento y lectura de las notas de parche: el **11 de abril a las 13:00** (hora peninsular), *Yoshida* leerá las notas de parche. El **mantenimiento** previo al lanzamiento del parche **durará 24 horas**.
 
