--- a/_posts/2022-04-03-live-letter-70-2.md
+++ b/_posts/2022-04-03-live-letter-70-2.md
@@ -5,8 +5,60 @@ author: kayda
 categories: [  ]
 tags: [noticias, carta del productor]
 image: assets/images/articles/noticias/live-letter/70/imagen-1.jpg
-description: "En la Live Letter del 1 de abril  se ha mostrado el tráiler del parche 6.1 y se han dado más detalles sobre las próximas novedades."
+description: "En este artículo se detalla toda la información sobre las novedades del modo Jugador contra Jugador que han compartido durante la Live Letter del 1 de abril."
 featured: false
 hidden: true
 ---
-xxxxxxxxxxx
+
+Durante la Live Letter del 1 de abril, han compartido una gran cantidad de información sobre los **cambios y novedades** del modo **Jugador contra Jugador** que introducirán a partir del parche 6.1.
+
+Para empezar, van a **reformar todas las habilidades** del modo Jugador contra Jugador y van a hacer **Limit Breaks para cada profesión**. Además, se pondrá fin a ***The Feast*** y ***Rival Wings*** no estará disponible por un tiempo, ya que quieren hacerle cambios.
+
+Una de las principales novedades será ***Crystalline Conflict***, un tipo de encuentro por equipos (**5 jugadores**, sin restricción de rol) que consiste en tomar el control de un cristal que se encuentra en el centro del campo de batalla y llevarlo hasta la meta, que está cerca de la base del equipo contrario.
+
+<p align="center">
+    <img src="{{ site.baseurl }}/assets/images/articles/noticias/live-letter/70/pvp/imagen-2.jpg" alt="Sistema de ayudantes"/>
+</p>
+
+Existirán tres tipos de partidas: **amistosas**, **clasificatorias** y **personalizadas**. Los encuentros durarán como máximo 5 minutos, se podrá esprintar siempre que se quiera (excepto al usar otras acciones) y todas las profesiones tendrán su propia habilidad de cura.<br/>
+Al inicio de cada encuentro, se mostrarán los **retratos** de las fichas de jugador de cada participante.
+
+<p align="center">
+    <img src="{{ site.baseurl }}/assets/images/articles/noticias/live-letter/70/pvp/imagen-3.jpg" alt="Sistema de ayudantes"/>
+</p>
+
+Otra gran novedad será el **sistema de recompensas**. Con la llegada de cada parche se celebrará una nueva “**serie**”. Si juegas a cualquier tipo de contenido del modo Jugador contra Jugador durante esta, ganarás experiencia de serie. Podrás subir de nivel en la serie gracias a la experiencia que ganes y obtendrás recompensas por cada nuevo nivel.
+
+<p align="center">
+    <img src="{{ site.baseurl }}/assets/images/articles/noticias/live-letter/70/pvp/imagen-4.jpg" alt="Sistema de ayudantes"/>
+</p>
+
+Entre los **premios** hay equipamiento, emotes, elementos para personalizar las fichas de jugador y una **nueva divisa**, los cristales trofeo (*Trophy Crystals*), que se podrán usar para comprar ciertos artículos en Wolves’ Den. Al comienzo de una nueva serie, volverás al primer nivel y las recompensas serán diferentes, pero tus cristales trofeo se mantendrán. Si no has conseguido alguna de las recompensas especiales de la serie anterior, podrás usar cristales trofeo para comprarlas durante la serie actual, pero dejarán de estar disponibles a partir de la siguiente serie.
+
+
+<p align="center">
+    <img src="{{ site.baseurl }}/assets/images/articles/noticias/live-letter/70/pvp/imagen-5.jpg" alt="Sistema de ayudantes"/>
+</p>
+
+Además, se ha detallado cómo va a funcionar el **sistema de clasificación** a partir del próximo parche. De momento, **solo estará disponible en *Crystalline Conflict***.<br/>
+Durante la temporada de clasificación, podrás alcanzar un puesto dentro de una determinada **división** (*tier*) en función de la cantidad de partidas que hayas ganado. Al final de la temporada, recibirás **recompensas** según tu división y puesto en la clasificación.
+
+Las divisiones comprendidas entre Bronce y Diamante contarán con subcategorías a las que llamarán “***risers***”. Para progresar y pasar de división, habrá que **escalar** por las **subcategorías**. Por ejemplo, si eres Bronce 3, deberás subir hasta Bronce 1 para poder pasar a la división Plata y, cuando esto ocurra, empezarás en Plata 3.
+
+<p align="center">
+    <img src="{{ site.baseurl }}/assets/images/articles/noticias/live-letter/70/pvp/imagen-6.jpg" alt="Sistema de ayudantes"/>
+</p>
+
+Por cada victoria, recibirás una **estrella** y deberás conseguir una cierta cantidad de estrellas para avanzar a la siguiente subcategoría. En caso de derrota, perderás una estrella. Si te quedas sin estrellas, bajarás de subcategoría, pero nunca podrás bajar de división.
+
+<p align="center">
+    <img src="{{ site.baseurl }}/assets/images/articles/noticias/live-letter/70/pvp/imagen-7.jpg" alt="Sistema de ayudantes"/>
+</p>
+
+Además, se va a añadir una **nueva división**, más alta que Diamante: **Cristal**. Para acceder a ella, deberás llegar a Diamante 1 y ganar una partida en posesión de tres estrellas. Tu puesto en esta división se determinará en función de tu **crédito**, que dependerá de los resultados de las partidas.
+
+Por último, se ha mostrado el **cronograma** del parche 6.1. Durante este, se celebrará **una serie del sistema de recompensas**, mientras que habrá **dos temporadas de clasificación**.
+
+<p align="center">
+    <img src="{{ site.baseurl }}/assets/images/articles/noticias/live-letter/70/pvp/imagen-8.jpg" alt="Sistema de ayudantes"/>
+</p>
