--- a/_posts/2022-04-08-fashion220408.md
+++ b/_posts/2022-04-08-fashion220408.md
@@ -18,9 +18,9 @@ Esta semana de nuevo [Kaiyoko Star](https://twitter.com/kaiyokostar){:target="_b
 
 Para hacer los **80 puntos** de manera fácil y ganar los **60,000 MGP**:
 
-- En **guantes** cualquier pieza teñida con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/0c0c7f94f09/" class="eorzeadb_link" target="_blank">Soot Black Dye </a>, el cual se puede hacer con una receta de nivel 30 de Carpenter, Blacksmith, Armorer, Goldsmith, Leatherworker, Weaver, Alchemist o Cullinarian, aunque tambien la podremos comprar el Tablón del Mercado (*Market Board* en Inglés).
-- En **cabeza** <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/43823c803ff/" class="eorzeadb_link" target="_blank">Cotton Halfgloves</a> que podéis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/5c0bdbdc542/?item=791b438d0fe&type=gil" class="eorzeadb_link" target="_blank">Domitien</a> en **Old Gridania (X:14.3 Y:9.8)** en la categoría *Purchase Purchase Diciple of the Hand/Land Gear > Purchase Gear (Lv. 10-19)* por 336 gil, esta pieza es <b>equipable</b> para <b>todas las clases</b>.
-- En **zapatos** cualquier pieza teñida con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/c18be404e86/" class="eorzeadb_link" target="_blank">Salmon Pink Dye</a> que podeis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/a28cf0441f4/?item=70849afadc9&type=gil" class="eorzeadb_link" target="_blank">Alaric</a> en **Old Gridania (X:14.3 Y:8.8)** por 40 gil.
+- En **cabeza** cualquier pieza teñida con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/c18be404e86/" class="eorzeadb_link" target="_blank">Salmon Pink Dye</a> que podeis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/a28cf0441f4/?item=70849afadc9&type=gil" class="eorzeadb_link" target="_blank">Alaric</a> en **Old Gridania (X:14.3 Y:8.8)** por 40 gil.
+- En **guantes** <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/43823c803ff/" class="eorzeadb_link" target="_blank">Cotton Halfgloves</a> que podéis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/5c0bdbdc542/?item=791b438d0fe&type=gil" class="eorzeadb_link" target="_blank">Domitien</a> en **Old Gridania (X:14.3 Y:9.8)** en la categoría *Purchase Purchase Diciple of the Hand/Land Gear > Purchase Gear (Lv. 10-19)* por 336 gil, esta pieza es <b>equipable</b> para <b>todas las clases</b>.
+- En **zapatos** cualquier pieza teñida con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/0c0c7f94f09/" class="eorzeadb_link" target="_blank">Soot Black Dye </a>, el cual se puede hacer con una receta de nivel 30 de Carpenter, Blacksmith, Armorer, Goldsmith, Leatherworker, Weaver, Alchemist o Cullinarian, aunque tambien la podremos comprar el Tablón del Mercado (*Market Board* en Inglés).
 
 <blockquote>
 Por ultimo recordar que en el parche 6.1 introducen la montura <b>Pod 602</b> que podremos comprar por <b>MGP</b>, aunque aun no sabemos su precio, pero hacer el fashion report es una manera fácil de ir obteniendo lo que cueste.
