--- a/_posts/2022-04-12-garo-2022.md
+++ b/_posts/2022-04-12-garo-2022.md
@@ -35,7 +35,7 @@ Las monturas podrán ser obtenidas con logros que implican el ganar partidas JcJ
 
 - **Fame Fatale**: **Ganar 30** partidas de **Feast** o **Crystalline Conflict** con el título equipado.
 - **Frontline Fury**: **Ganar 30** partidas de **Frontline** o **Rival Wings** con el título equipado.
-- **Fame Fatale**: **Ganar 60** partidas **combinado** **Frontline/Rival Wings** o **Feast/Crystalline Conflict** con el título equipado.
+- **Furious Fatalities**: **Ganar 60** partidas **combinado** **Frontline/Rival Wings** o **Feast/Crystalline Conflict** con el título equipado.
 
 **\*Nota: estas recompensas no se podrán obtener cuando el evento de GARO haya finalizado**
 
