--- a/_posts/2022-07-22-fashion220722.md
+++ b/_posts/2022-07-22-fashion220722.md
@@ -19,7 +19,7 @@ Esta semana de nuevo [Kaiyoko Star](https://twitter.com/kaiyokostar){:target="_b
 Para hacer los **80 puntos** de manera fácil y ganar los **60,000 MGP**:
 
 - En **guantes cualquier pieza teñida** con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/e8e16900586/" class="eorzeadb_link" target="_blank">Opo-opo Brown Dye</a>,  el cual podéis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/a28cf0441f4/?item=70849afadc9&type=gil" class="eorzeadb_link" target="_blank">Alaric</a> en **Old Gridania (X:14.3 Y:8.8)** por 40 gil.
-- En **zapatos cualquier pieza teñida** con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/e8e16900586/" class="eorzeadb_link" target="_blank">Opo-opo Brown Dye</a>,  el cual podéis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/a28cf0441f4/?item=70849afadc9&type=gil" class="eorzeadb_link" target="_blank">Alaric</a> en **Old Gridania (X:14.3 Y:8.8)** por 40 gil.
+- En **zapatos** <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/791b438d0fe/" class="eorzeadb_link" target="_blank">Leather Duckbills</a>, que podeis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/5c0bdbdc542/?item=791b438d0fe&type=gil" class="eorzeadb_link" target="_blank">Domitien</a> en **Old Gridania (X:14.3 Y:9.8)** en la categoria *Purchase Disciple of Magic Gear* > Purchase Gear (Lv. 1-9) por 48 gil, teñido con <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/item/e8e16900586/" class="eorzeadb_link" target="_blank">Opo-opo Brown Dye</a>,  el cual podéis comprar a <a href="https://eu.finalfantasyxiv.com/lodestone/playguide/db/shop/a28cf0441f4/?item=70849afadc9&type=gil" class="eorzeadb_link" target="_blank">Alaric</a> en **Old Gridania (X:14.3 Y:8.8)** por 40 gil.
 
 <blockquote>
 Por ultimo recordar que en el parche 6.1 introdujeron la montura <b>Pod 602</b> que podremos comprar por <b>300,000 MGP</b>, y hacer el fashion report es una manera fácil de obtenerla.
