--- a/_posts/2022-08-03-donde-wol-1.md
+++ b/_posts/2022-08-03-donde-wol-1.md
@@ -13,12 +13,16 @@ hidden: true
 Nuestro guerrero de la Luz es un aventurero y como tal visita distintos lugares en sus aventuras. ¿Podrás adivinar donde está en esta ocasión?
 
 <blockquote>
-Esta artículo pertenece a una de las actividades en la semana temática de FFXIVESP, para mas información sobre la misma podéis ver el siguiente <a href="https://twitter.com/FFXIVESP_" target="_blank">enlace</a>.<br/>
+Esta artículo pertenece a una de las actividades en el evento benéfico de FFXIVESP, para mas información sobre la misma podéis ver el siguiente <a href="https://twitter.com/FFXIVESP_" target="_blank">enlace</a>.<br/>
 <br/>
 Necesito copy del testo y imagen del <b>Participa</b>.
 </blockquote>
 
-Para encontrar donde esta nuestro guerrero de la luz podéis usar los NPCs que se ven en la siguiente imagen, al pie de la misma esta la solución, haciendo click en ella podéis descubrirla.
+Durante este **evento** la gaceta os quiere plantear un **simple juego**, os vamos a **mostrar una imagen** de donde está nuestro Guerrero de la Luz para que intentéis **adivinar la ubicación**, podéis usar los **NPCs** que se muestran como clara **referencia** del lugar.
+
+Una vez que **tengáis claro donde se encuentra** nuestro guerrero de la luz, podéis **confirmarlo haciendo click** en el **texto** que se ve borroso al **pie de la imagen** para revelar cual es la ubicación.
+
+Os **animamos que uséis estas entradas para desafiar a vuestros amigos** y compañeros de aventuras a encontrar todas las ubicaciones que iremos mostrando.
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" integrity="sha512-Velp0ebMKjcd9RiCoaHhLXkR1sFoCCWXNp6w4zj1hfMifYB5441C+sKeBl/T/Ka6NjBiRfBBQRaQq65ekYz3UQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
