--- a/_posts/2022-08-03-donde-wol-1.md
+++ b/_posts/2022-08-03-donde-wol-1.md
@@ -18,11 +18,19 @@ Esta artículo pertenece a una de las actividades en el evento benéfico de FFXI
 Necesito copy del testo y imagen del <b>Participa</b>.
 </blockquote>
 
-Durante este **evento** la gaceta os quiere plantear un **simple juego**, os vamos a **mostrar una imagen** de donde está nuestro Guerrero de la Luz para que intentéis **adivinar la ubicación**, podéis usar los **NPCs** que se muestran como clara **referencia** del lugar.
+Durante este **evento** la gaceta os quiere plantear un **simple juego**, os vamos a **mostrar una imagen** de **donde está nuestro Guerrero de la Luz** para que intentéis **adivinar la ubicación**, para ello debéis seguir las siguientes instrucciones. 
 
-Una vez que **tengáis claro donde se encuentra** nuestro guerrero de la luz, podéis **confirmarlo haciendo click** en el **texto** que se ve borroso al **pie de la imagen** para revelar cual es la ubicación.
+- La gaceta pondrá una **imagen** que podréis ver **debajo de estas instrucciones** donde veréis a nuestro guerrero de la luz junto a algunos NPCs.
+- Debéis **subir a twitter una imagen** en dicha **ubicación** con **vuestro guerrero de la luz**, **sin poder mencionar cual es** para **no spoilear** a quienes la quieran encontrar.
+- El twitter tiene que **citar** a [@GacetaEorzea](https://twitter.com/GacetaEorzea){:target="_blank"} y **incluir los hastag** [#beneficoxxxxx](https://twitter.com/hashtag/beneficoxxxxx){:target="_blank"} **#donde-esta-guerrero-luz-NUMERO DE IMAGEN** en este caso seria [#donde-esta-guerrero-luz-1](#donde-esta-guerrero-luz-1){:target="_blank"}
+- Al **dia siguiente confirmaremos la ubicación** y subiremos una **galería con las imágenes** que hayan **acertado** en el **orden** que fueron publicadas en twitter
+- **Posteriormente** publicaremos las siguiente imagen con una **nueva ubicación**.
 
-Os **animamos que uséis estas entradas para desafiar a vuestros amigos** y compañeros de aventuras a encontrar todas las ubicaciones que iremos mostrando.
+**Ejemplo de Twitter para participar**:
+
+<p align="center"><img src="{{ site.baseurl }}/assets/images/articles/comunidad/donde-wol/ejemplo.jpg" width="50%"></p>
+
+La **primera imagen** donde tenéis que **adivinar la ubicación** y usar el **hashtag** [#donde-esta-guerrero-luz-1](#donde-esta-guerrero-luz-1){:target="_blank"} es:
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" integrity="sha512-Velp0ebMKjcd9RiCoaHhLXkR1sFoCCWXNp6w4zj1hfMifYB5441C+sKeBl/T/Ka6NjBiRfBBQRaQq65ekYz3UQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -33,14 +41,9 @@ Os **animamos que uséis estas entradas para desafiar a vuestros amigos** y comp
             <a href="{{ site.baseurl }}/assets/images/articles/comunidad/donde-wol/01.jpg" data-toggle="lightbox"><img src="{{ site.baseurl }}/assets/images/articles/comunidad/donde-wol/01.jpg"></a>
         </div>       
     </div>
-    <div class="row">  
-        <div class="col-xl">
-            <p align="center">
-                <b>Solución</b>: <span class="spoiler">Coerthas - Empyreum - Ingleside</span>
-            </p>
-        </div>
-    </div>
 </div>
+
+¡Esperamos que os resulte divertido este juego y os animamos a participar con el resto de guerreros de la luz!.
 
 <script>
     $(document).on('click', '[data-toggle="lightbox"]', function(event) {
