--- a/_posts/2022-08-03-donde-wol-1.md
+++ b/_posts/2022-08-03-donde-wol-1.md
@@ -13,16 +13,16 @@ hidden: true
 Nuestro guerrero de la Luz es un aventurero y como tal visita distintos lugares en sus aventuras. ¿Podrás adivinar donde está en esta ocasión?
 
 <blockquote>
-Esta artículo pertenece a una de las actividades en el evento benéfico de FFXIVESP, para mas información sobre la misma podéis ver el siguiente <a href="https://twitter.com/FFXIVESP_" target="_blank">enlace</a>.<br/>
+Esta artículo pertenece a una de las actividades en el <b>evento benéfico Canción de Esperanza</b> de <a href="https://twitter.com/FFXIVESP_" target="_blank">FFXIVESP</a> cuyos beneficios van en favor de la fundación Solidaria <a href="https://www.juegaterapia.org" target="_blank">juegaterapia</a>, para <b>mas información</b> podéis ver el siguiente <a href="https://twitter.com/FFXIVESP_" target="_blank">enlace</a>.<br/>
 <br/>
-Necesito copy del testo y imagen del <b>Participa</b>.
+<p align="center"><img src="{{ site.baseurl }}/assets/images/articles/comunidad/donde-wol/beneficio_horizontal.jpg" width="50%"></p>
 </blockquote>
 
 Durante este **evento** la gaceta os quiere plantear un **simple juego**, os vamos a **mostrar una imagen** de **donde está nuestro Guerrero de la Luz** para que intentéis **adivinar la ubicación**, para ello debéis seguir las siguientes instrucciones. 
 
-- La gaceta pondrá una **imagen** que podréis ver **debajo de estas instrucciones** donde aparecerá nuestro guerrero de la luz junto a algunos NPCs.
+- La gaceta pondrá una **imagen** que podréis ver **debajo de estas instrucciones** donde nuestro guerrero de la luz estará en una ubicación junto a algunos NPCs.
 - Debéis **subir a twitter una imagen** en dicha **ubicación** con **vuestro guerrero de la luz**, **sin poder mencionar cual es** para **no spoilear** a quienes la quieran encontrar.
-- El tweet tiene que **citar** a [@GacetaEorzea](https://twitter.com/GacetaEorzea){:target="_blank"} y **incluir los hastag** [#beneficoxxxxx](https://twitter.com/hashtag/beneficoxxxxx){:target="_blank"} **#donde-esta-guerrero-luz-NUMERO DE IMAGEN** en este caso seria [#donde-esta-guerrero-luz-1](#donde-esta-guerrero-luz-1){:target="_blank"}
+- El tweet tiene que **citar** a [@GacetaEorzea](https://twitter.com/GacetaEorzea){:target="_blank"} y **incluir los hastag** [#FFXIVESP_BENÉFICO](https://twitter.com/hashtag/FFXIVESP_BENÉFICO){:target="_blank"} y **#donde-esta-guerrero-luz-NUMERO DE IMAGEN** en este caso seria [#donde-esta-guerrero-luz-1](https://twitter.com/hashtag/donde-esta-guerrero-luz-1){:target="_blank"}
 - Al **dia siguiente confirmaremos la ubicación** y subiremos una **galería con las imágenes** que hayan **acertado** en el **orden** que fueron publicadas en twitter
 - **Posteriormente** publicaremos las siguiente imagen con una **nueva ubicación**.
 
@@ -30,7 +30,7 @@ Durante este **evento** la gaceta os quiere plantear un **simple juego**, os vam
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/comunidad/donde-wol/ejemplo.jpg" width="50%"></p>
 
-La **primera imagen** donde tenéis que **adivinar la ubicación** y usar el **hashtag** [#donde-esta-guerrero-luz-1](#donde-esta-guerrero-luz-1){:target="_blank"} es:
+La **primera imagen** donde tenéis que **adivinar la ubicación** y usar el **hashtag** [#donde-esta-guerrero-luz-1](https://twitter.com/hashtag/donde-esta-guerrero-luz-1){:target="_blank"} es:
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" integrity="sha512-Velp0ebMKjcd9RiCoaHhLXkR1sFoCCWXNp6w4zj1hfMifYB5441C+sKeBl/T/Ka6NjBiRfBBQRaQq65ekYz3UQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
