mas del bgenefico

--- a/_posts/2022-08-15-donde-wol-1.md
+++ b/_posts/2022-08-15-donde-wol-1.md
@@ -13,9 +13,9 @@ hidden: true
 Nuestro guerrero de la Luz es un aventurero y como tal visita distintos lugares en sus aventuras. ¿Podrás adivinar donde está en esta ocasión?
 
 <blockquote>
-Esta artículo pertenece a una de las actividades en el <b>evento benéfico Canción de Esperanza</b> de <a href="https://twitter.com/FFXIVESP_" target="_blank">FFXIVESP</a> cuyos beneficios van en favor de la fundación Solidaria <a href="https://www.juegaterapia.org" target="_blank">juegaterapia</a>, para <b>mas información</b> podéis ver el siguiente <a href="https://twitter.com/FFXIVESP_" target="_blank">enlace</a>.<br/>
+Esta artículo pertenece a una de las actividades en el <b>evento benéfico Canción de Esperanza</b> de <a href="https://twitter.com/FFXIVESP_" target="_blank">FFXIVESP</a> cuyos beneficios van en favor de la fundación Solidaria <a href="https://www.juegaterapia.org" target="_blank">juegaterapia</a>, para <b>mas información</b> podéis ver el siguiente <a href="/cancion-esperanza/" target="_blank">enlace</a>.<br/>
 <br/>
-<p align="center"><img src="{{ site.baseurl }}/assets/images/articles/comunidad/donde-wol/beneficio_horizontal.jpg" width="50%"></p>
+<p align="center"><img src="{{ site.baseurl }}/assets/images/articles/comunidad/donde-wol/beneficio_horizontal.jpg"></p>
 </blockquote>
 
 Durante este **evento** la gaceta os quiere plantear un **simple juego**, os vamos a **mostrar una imagen** de **donde está nuestro Guerrero de la Luz** para que intentéis **adivinar la ubicación**, para ello debéis seguir las siguientes instrucciones. 
