--- a/_posts/2022-08-15-donde-wol-8.md
+++ b/_posts/2022-08-15-donde-wol-8.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title:  "¿Dónde está el guerrero de la Luz? Parte 1"
+title:  "¿Dónde está el guerrero de la Luz? Parte 8"
 author: cecile
 categories: [ ]
 tags: []
 image: assets/images/articles/comunidad/donde-wol/portada.jpg
-description: "¿Dónde está el guerrero de la Luz? Parte 1"
+description: "¿Dónde está el guerrero de la Luz? Parte 8"
 featured: false
 hidden: true
 ---
@@ -22,15 +22,15 @@ Durante este **evento** la gaceta os quiere plantear un **simple juego**, os vam
 
 - La gaceta pondrá una **imagen** que podréis ver **debajo de estas instrucciones** donde nuestro guerrero de la luz estará en una ubicación junto a algunos NPCs.
 - Debéis **subir a twitter una imagen** en dicha **ubicación** con **vuestro guerrero de la luz**, **sin poder mencionar cual es** para **no spoilear** a quienes la quieran encontrar.
-- El tweet tiene que **citar** a [@GacetaEorzea](https://twitter.com/GacetaEorzea){:target="_blank"} y **incluir los hastag** [#FFXIVESP_BENÉFICO](https://twitter.com/hashtag/FFXIVESP_BENÉFICO){:target="_blank"} y **#donde-esta-guerrero-luz-NUMERO DE IMAGEN** en este caso seria [#donde-esta-guerrero-luz-1](https://twitter.com/hashtag/donde-esta-guerrero-luz-1){:target="_blank"}
+- El tweet tiene que **citar** a [@GacetaEorzea](https://twitter.com/GacetaEorzea){:target="_blank"} y **incluir los hastag** [#FFXIVESP_BENÉFICO](https://twitter.com/hashtag/FFXIVESP_BENÉFICO){:target="_blank"} y **#donde-esta-guerrero-luz-NUMERO DE IMAGEN** en este caso seria [#donde-esta-guerrero-luz-8](https://twitter.com/hashtag/donde-esta-guerrero-luz-8){:target="_blank"}
 - Al **dia siguiente confirmaremos la ubicación** y subiremos una **galería con las imágenes** que hayan **acertado** en el **orden** que fueron publicadas en twitter
 - **Posteriormente** publicaremos las siguiente imagen con una **nueva ubicación**.
 
 **Ejemplo de tweet para participar**:
 
-<p align="center"><img src="{{ site.baseurl }}/assets/images/articles/comunidad/donde-wol/01/ejemplo1.jpg" width="50%"></p>
+<p align="center"><img src="{{ site.baseurl }}/assets/images/articles/comunidad/donde-wol/08/ejemplo8.jpg" width="50%"></p>
 
-La **primera imagen** donde tenéis que **adivinar la ubicación** y usar el **hashtag** [#donde-esta-guerrero-luz-1](https://twitter.com/hashtag/donde-esta-guerrero-luz-1){:target="_blank"} es:
+La **primera imagen** donde tenéis que **adivinar la ubicación** y usar el **hashtag** [#donde-esta-guerrero-luz-8](https://twitter.com/hashtag/donde-esta-guerrero-luz-8){:target="_blank"} es:
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" integrity="sha512-Velp0ebMKjcd9RiCoaHhLXkR1sFoCCWXNp6w4zj1hfMifYB5441C+sKeBl/T/Ka6NjBiRfBBQRaQq65ekYz3UQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -38,7 +38,7 @@ La **primera imagen** donde tenéis que **adivinar la ubicación** y usar el **h
 <div class="container card">
     <div class="row">
         <div class="col-xl">
-            <a href="{{ site.baseurl }}/assets/images/articles/comunidad/donde-wol/01/01.jpg" data-toggle="lightbox"><img src="{{ site.baseurl }}/assets/images/articles/comunidad/donde-wol/01/01.jpg"></a>
+            <a href="{{ site.baseurl }}/assets/images/articles/comunidad/donde-wol/08/08.jpg" data-toggle="lightbox"><img src="{{ site.baseurl }}/assets/images/articles/comunidad/donde-wol/08/08.jpg"></a>
         </div>       
     </div>
 </div>
@@ -48,14 +48,14 @@ La **primera imagen** donde tenéis que **adivinar la ubicación** y usar el **h
 <!----
 #### Imágenes que han acertado
 
-En esta ocasión **nuestro WoL estaba en Empyreum - Ingleside**, aquí dejamos las imágenes que han acertado.
+En esta ocasión **nuestro WoL estaba en Terncliff**, aquí dejamos las imágenes que han acertado.
 
 <sub><sup><i>Las imágenes a continuación están en orden de su publicación en twitter y el nombre del autor es el que tiene indicado en dicha plataforma.</i></sup></sub>
 
 <div class="container card">
     <div class="row">
         <div class="col-xl">
-            <a href="{{ site.baseurl }}/assets/images/articles/comunidad/donde-wol/01/01.jpg" data-toggle="lightbox"><img src="{{ site.baseurl }}/assets/images/articles/comunidad/donde-wol/01/01.jpg"></a>
+            <a href="{{ site.baseurl }}/assets/images/articles/comunidad/donde-wol/08/08.jpg" data-toggle="lightbox"><img src="{{ site.baseurl }}/assets/images/articles/comunidad/donde-wol/08/08.jpg"></a>
         </div>       
     </div>
     <div class="row">  
@@ -67,6 +67,7 @@ En esta ocasión **nuestro WoL estaba en Empyreum - Ingleside**, aquí dejamos l
 
 <br/>
 ---->
+
 
 <script>
     $(document).on('click', '[data-toggle="lightbox"]', function(event) {
