--- a/_posts/2022-08-15-donde-wol-4.md
+++ b/_posts/2022-08-15-donde-wol-4.md
@@ -30,7 +30,7 @@ Durante este **evento** la gaceta os quiere plantear un **simple juego**, os vam
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/comunidad/donde-wol/04/ejemplo4.jpg" width="50%"></p>
 
-La **primera imagen** donde tenéis que **adivinar la ubicación** y usar el **hashtag** [#donde-esta-guerrero-luz-4](https://twitter.com/hashtag/donde-esta-guerrero-luz-4){:target="_blank"} es:
+La **cuarta imagen** donde tenéis que **adivinar la ubicación** y usar el **hashtag** [#donde-esta-guerrero-luz-4](https://twitter.com/hashtag/donde-esta-guerrero-luz-4){:target="_blank"} es:
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" integrity="sha512-Velp0ebMKjcd9RiCoaHhLXkR1sFoCCWXNp6w4zj1hfMifYB5441C+sKeBl/T/Ka6NjBiRfBBQRaQq65ekYz3UQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
