--- a/_posts/2022-08-15-donde-wol-8.md
+++ b/_posts/2022-08-15-donde-wol-8.md
@@ -22,7 +22,7 @@ Durante este **evento** la gaceta os quiere plantear un **simple juego**, os vam
 
 - La gaceta pondrá una **imagen** que podréis ver **debajo de estas instrucciones** donde nuestro guerrero de la luz estará en una ubicación junto a algunos NPCs.
 - Debéis **subir a twitter una imagen** en dicha **ubicación** con **vuestro guerrero de la luz**, **sin poder mencionar cual es** para **no spoilear** a quienes la quieran encontrar.
-- El tweet tiene que **citar** a [@GacetaEorzea](https://twitter.com/GacetaEorzea){:target="_blank"} y **incluir los hastag** [#FFXIVESP_BENÉFICO](https://twitter.com/hashtag/FFXIVESP_BENÉFICO){:target="_blank"} y **#donde-esta-guerrero-luz-NUMERO DE IMAGEN** en este caso seria [#donde-esta-guerrero-luz-8](https://twitter.com/hashtag/donde-esta-guerrero-luz-8){:target="_blank"}
+- El tweet tiene que **citar** a [@GacetaEorzea](https://twitter.com/GacetaEorzea){:target="_blank"} y **incluir los hastag** [#FFXIVESP_BENÉFICO](https://twitter.com/hashtag/FFXIVESP_BENÉFICO){:target="_blank"} y **#dondeestaguerreroluzNUMERO DE IMAGEN** en este caso seria [#dondeestaguerreroluz8](https://twitter.com/hashtag/dondeestaguerreroluz8){:target="_blank"}
 - Al **dia siguiente confirmaremos la ubicación** y subiremos una **galería con las imágenes** que hayan **acertado** en el **orden** que fueron publicadas en twitter
 - **Posteriormente** publicaremos las siguiente imagen con una **nueva ubicación**.
 
@@ -30,7 +30,7 @@ Durante este **evento** la gaceta os quiere plantear un **simple juego**, os vam
 
 <p align="center"><img src="{{ site.baseurl }}/assets/images/articles/comunidad/donde-wol/08/ejemplo8.jpg" width="50%"></p>
 
-La **octava imagen** donde tenéis que **adivinar la ubicación** y usar el **hashtag** [#donde-esta-guerrero-luz-8](https://twitter.com/hashtag/donde-esta-guerrero-luz-8){:target="_blank"} es:
+La **octava imagen** donde tenéis que **adivinar la ubicación** y usar el **hashtag** [#dondeestaguerreroluz8](https://twitter.com/hashtag/dondeestaguerreroluz8){:target="_blank"} es:
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" integrity="sha512-Velp0ebMKjcd9RiCoaHhLXkR1sFoCCWXNp6w4zj1hfMifYB5441C+sKeBl/T/Ka6NjBiRfBBQRaQq65ekYz3UQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
