--- a/_posts/2022-08-29-sombras-3.md
+++ b/_posts/2022-08-29-sombras-3.md
@@ -7,7 +7,7 @@ tags: [lore, relatos]
 image: assets/images/articles/relatos/sombras-1/portada.jpg
 description: "Traducción al castellano de los relatos del lodestone, Relatos desde las Sombras : Una asociación de ensueño"
 featured: false
-hidden: false
+hidden: true
 ---
 
 *Con motivo del sexto aniversario de FINAL FANTASY XIV, presentamos una nueva colección de historias secundarias con Relatos desde las Sombras. Echa un vistazo a los momentos cruciales de las vidas de los personajes centrales de la trama de Shadowbringers.*
