--- a/_posts/2022-08-29-sombras-3.md
+++ b/_posts/2022-08-29-sombras-3.md
@@ -7,12 +7,12 @@ tags: [lore, relatos]
 image: assets/images/articles/relatos/sombras-1/portada.jpg
 description: "Traducción al castellano de los relatos del lodestone, Relatos desde las Sombras : Una asociación de ensueño"
 featured: false
-hidden: true
+hidden: false
 ---
 
 *Con motivo del sexto aniversario de FINAL FANTASY XIV, presentamos una nueva colección de historias secundarias con Relatos desde las Sombras. Echa un vistazo a los momentos cruciales de las vidas de los personajes centrales de la trama de Shadowbringers.*
 
-<sub><sup>Traducción del relato [original](https://jp.finalfantasyxiv.com/lodestone/special/tales_from_the_shadows/sidestory_02/#sidestory_02){:target="_blank"} publicado en la lodestone.</sup></sub>
+<sub><sup>Traducción del relato [original](https://jp.finalfantasyxiv.com/lodestone/special/tales_from_the_shadows/sidestory_06/){:target="_blank"} publicado en la lodestone.</sup></sub>
 
 ### Una asociación de ensueño
 
