--- a/_posts/2022-08-31-sombras-4.md
+++ b/_posts/2022-08-31-sombras-4.md
@@ -7,7 +7,7 @@ tags: [lore, relatos]
 image: assets/images/articles/relatos/sombras-1/portada.jpg
 description: "Traducción al castellano de los relatos del lodestone, Relatos desde las Sombras : Ecos de la desilusión"
 featured: false
-hidden: true
+hidden: false
 ---
 
 *Con motivo del sexto aniversario de FINAL FANTASY XIV, presentamos una nueva colección de historias secundarias con Relatos desde las Sombras. Echa un vistazo a los momentos cruciales de las vidas de los personajes centrales de la trama de Shadowbringers.*
