--- a/_posts/2021-10-05-lia_tama.md
+++ b/_posts/2021-10-05-lia_tama.md
@@ -1,21 +1,21 @@
 ---
 layout: post
-title: "¡Lia nos la lía! 10 preguntas a TamAik"
+title: "¡Lia nos la lía! 10 preguntas a TamaElCalvo"
 author: lia
 categories: [ entrevistas ]
 tags: [entrevistas, "creadores", "comunidad"]
 image: assets/images/articles/entrevistas/lia_nos_la_lia.jpg
-description: "¡Lia nos la lía! 10 preguntas a TamAik"
+description: "¡Lia nos la lía! 10 preguntas a TamaElCalvo"
 featured: false
 hidden: false
 ---
 *10 preguntas a creadores de contenido es una serie de mini entrevistas en las que os iremos presentando un poquillo a varios creadores de contenido de la comunidad, no sólo de twitch o youtube sino de otros ámbitos también.*
 
-Hoy en 10 preguntas a creadores de contenido de FF14 tenemos a ... **TamAik**!!
+Hoy en 10 preguntas a creadores de contenido de FF14 tenemos a ... **TamaElCalvo**!!
 
 <div class="card">
   <div class="card-body">
-    <i><b>Tama</b></i>: Muy buenas Lia y saludos a todos los lectores! Me presento, soy <a href="https://twitter.com/tamaik_tama" target="_blank">Tama</a>, tengo 31 años y soy de México. Soy creador de contenido principalmente de FFXIV enfocado en ayudar a los nuevos jugadores y crear comunidad latina, y de habla hispana en general, alrededor de este hermoso juego :”3  Pueden pasar a saludarme en mi canal de <a href="https://twitch.tv/tamaik" target="_blank">Twitch</a> o checar mis guías en <a href="https://www.youtube.com/c/TamAikFFXIVenEspañol" target="_blank">YouTube</a> si es que apenas van comenzando el juego.
+    <i><b>Tama</b></i>: Muy buenas Lia y saludos a todos los lectores! Me presento, soy <a href="https://twitter.com/TamaElCalvo" target="_blank">Tama</a>, tengo 31 años y soy de México. Soy creador de contenido principalmente de FFXIV enfocado en ayudar a los nuevos jugadores y crear comunidad latina, y de habla hispana en general, alrededor de este hermoso juego :”3  Pueden pasar a saludarme en mi canal de <a href="https://twitch.tv/tamaelcalvo" target="_blank">Twitch</a> o checar mis guías en <a href="https://www.youtube.com/c/TamAikFFXIVenEspañol" target="_blank">YouTube</a> si es que apenas van comenzando el juego.
   </div>
 </div>
 
@@ -145,10 +145,10 @@ Hoy en 10 preguntas a creadores de contenido de FF14 tenemos a ... **TamAik**!!
 
 <div class="card">
   <div class="card-header">
-     <b><i>Lia</i>: ¡Muchísimas gracias por haberte tomado el tiempo de responder nuestras preguntas TamAik! No os olvidéis de darle like y suscribiros a su canal y nos vemos en la próxima entrega de Lia nos la lía <3</b>
+     <b><i>Lia</i>: ¡Muchísimas gracias por haberte tomado el tiempo de responder nuestras preguntas TamaElCalvo! No os olvidéis de darle like y suscribiros a su canal y nos vemos en la próxima entrega de Lia nos la lía <3</b>
   </div>
 </div>
 
 <br/>
 
-<p align="center"><img src="{{ site.baseurl }}/assets/images/articles/entrevistas/lia_tamaik/lia_tamaik.jpg" alt="Lia y TamAik"/></p>
+<p align="center"><img src="{{ site.baseurl }}/assets/images/articles/entrevistas/lia_tamaik/lia_tamaik.jpg" alt="Lia y TamaElCalvo"/></p>
