--- a/_posts/2022-10-14-viaje-uk.md
+++ b/_posts/2022-10-14-viaje-uk.md
@@ -75,6 +75,12 @@ Para **buscar** un **vuelo** hacia cualquier aeropuerto de Londres podéis usar 
 - London **Southend**, código **SEN**, este aeropuerto esta a unas **40 millas**, 60 KM, del centro, no hay **tren** rápido solo regulares.
 - London **Luton**, código **LTN**, este aeropuerto esta a unas **45 millas**, 70 KM, este aeropuerto **no tiene trenes** hay que ir en autobus a la estación de tren para ir a Londres.
 
+### Teléfonos Móviles
+
+**Aun después del Brexit Inglaterra** se sigue considerando **Zona 1 de Roaming** lo cual permitirá usar de **tu tarifa de datos como si estuvieras en España**, de todas formas os recomendamos **revisar con tu operadora** que no lo hayan cambiado, la **mayoría** de operadores hasta donde conocemos **siguen** teniéndola en la dicha **Zona 1**.
+
+La zonas **WiFi** de los **aeropuertos** suelen ser caras y **abusivas**, **no** os recomendamos **usarlas**, en **bares, hoteles y posiblemente** donde se organiza la **Fan Festival abra WiFi gratuita** que os recomendamos utilizar, tras **cerciorarnos** que asi es.
+
 ### Tranporte en Londres
 
 Londres tiene un **buen servicio de metro** que recorre toda la ciudad y que podéis usar para viajar por ella, podéis comprar **tickets individuales** o tarjetas de **descuento** llamadas **travel cards** las cuales hay **diarias o semanales**, también existe una tarjeta llamada **Oyster** que es **recargable** y tiene **descuento**, también tiene **versión para estudiantes**, eso si cuesta unas **7 libras el comprarla,** si que te de **nada de saldo**, y os la recomiendo **solo si pensáis venir mas veces** al reino unido. 
