--- a/_posts/2022-10-14-viaje-uk.md
+++ b/_posts/2022-10-14-viaje-uk.md
@@ -10,7 +10,7 @@ featured: false
 hidden: true
 ---
 
-Ya tenemos la **fecha** para el próximo **Fan Festival**, el cual se celebra en **Londres** el **21 de Octubre del 2023**, para ayudar a la comunidad que quiera venga de viaje hemos preparado una guía donde esperamos daros **consejos de caras a este viaje**.
+Ya tenemos la **fecha** para el próximo **Fan Festival**, el cual se celebra en **Londres** el **21 de Octubre del 2023**, para ayudar a la comunidad que quiera venga de viaje hemos preparado una guía donde esperamos daros **consejos de cara a este viaje**.
 
 #### Documentación
 
